Make VBC extension API user bearerAuth

--- a/definitions/vonage-business-cloud/extension.yml
+++ b/definitions/vonage-business-cloud/extension.yml
@@ -12,7 +12,7 @@ info:
     url: "https://www.vonage.com/business/legal-policy-center/business-cloud/tos"
 
 servers:
-- url: "https://api.vonage.com"  
+- url: "https://api.vonage.com"
 paths:
 
   "/api/accounts/{account_id}/extensions":
@@ -76,8 +76,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/ErrorResponse"
       security:
-        - LoginName:
-            []
+        - bearerAuth: []
       summary: Get account extensions data by account ID
 
   "/api/accounts/{account_id}/extensions/{extension_number}":
@@ -107,16 +106,15 @@ paths:
               schema:
                 $ref: "#/components/schemas/ErrorResponse"
       security:
-        - LoginName:
-            []
+        - bearerAuth: []
       summary: Get extension data by account ID and extension number
 
 components:
   securitySchemes:
-    LoginName:
-      type: apiKey
-      name: x-von-user
-      in: header
+    bearerAuth:
+      type: http
+      scheme: bearer
+      bearerFormat: OAuth
 
   parameters:
     AccountID:
@@ -126,7 +124,7 @@ components:
       schema:
         type: string
       description: The account ID
-  
+
   schemas:
     Href:
       properties:
@@ -227,5 +225,3 @@ components:
           description: Http Response Code
           type: number
       type: object
-
-
