--- a/definitions/vonage-business-cloud/extension.yml
+++ b/definitions/vonage-business-cloud/extension.yml
@@ -1,7 +1,7 @@
 ---
 openapi: 3.0.0
 info:
-  version: 1.10.1
+  version: 1.11.7
   title: Extension API
   description: Retrieve information about extensions.
   contact:
@@ -12,7 +12,7 @@ info:
     url: "https://www.vonage.com/business/legal-policy-center/business-cloud/tos"
 
 servers:
-- url: "https://api.vonage.com"
+- url: "https://api.vonage.com/t/vbc.prod/provisioning"
 paths:
 
   "/api/accounts/{account_id}/extensions":
@@ -25,43 +25,43 @@ paths:
           required: false
           schema:
             type: number
-          description: Page size for pagination
+          description: Number of records per page
+          example: 10
         - in: query
-          name: cursor
+          name: page
           required: false
           schema:
             type: number
-          description: Cursor for pagination
-        - in: query
-          name: order
-          required: false
-          schema:
-            type: string
-          description: Sort results in ascending (ASC) or descending (DESC) order
+          description: Current page number
+          example: 10
         - in: query
           name: location_id
           required: false
           schema:
             type: number
-          description: filter by location id
+          description: Filter by location id
+          example: 123456
         - in: query
           name: phone_number
           required: false
           schema:
             type: string
-          description: filter by phone number
+          description: Filter by phone number
+          example: "14155550100"
         - in: query
           name: login_name
           required: false
           schema:
             type: string
-          description: filter by login name
+          description: Filter by login name
+          example: "jsmith"
         - in: query
           name: email
           required: false
           schema:
             type: string
-          description: filter by email address
+          description: Filter by email address
+          example: "john.smith@example.com"
       responses:
         "200":
           description: Success
@@ -69,12 +69,12 @@ paths:
             "application/json":
               schema:
                 $ref: "#/components/schemas/EndUserRouteHalResponse"
-        "404":
-          description: Extension not found
+        "400":
+          description: Invalid parameters given
           content:
             "application/json":
               schema:
-                $ref: "#/components/schemas/ErrorResponse"
+                $ref: "#/components/schemas/ValidationErrorsResponse"
       security:
         - bearerAuth: []
       summary: Get account extensions data by account ID
@@ -82,16 +82,15 @@ paths:
   "/api/accounts/{account_id}/extensions/{extension_number}":
     get:
       operationId: ExtensionCtrl.getAccountExtensionByID
-      tags:
-        - Extensions
       parameters:
         - $ref: '#/components/parameters/AccountID'
         - in: path
           name: extension_number
           required: true
           schema:
-            type: string
+            type: number
           description: The extension number
+          example: 789
       responses:
         "200":
           description: Success
@@ -126,76 +125,126 @@ components:
       description: The account ID
 
   schemas:
-    Href:
+    FirstHref:
       properties:
         href:
           type: string
-      type: object
+      description: URL to the first page of records
+    PrevHref:
+      properties:
+        href:
+          type: string
+      description: URL to the previous page of records
+    SelfHref:
+      properties:
+        href:
+          type: string
+      description: URL to the current page of records
+    NextHref:
+      properties:
+        href:
+          type: string
+      description: URL to the next page of records
+    LastHref:
+      properties:
+        href:
+          type: string
+      description: URL to the last page of records
 
     Links:
       properties:
         first:
-          $ref: "#/components/schemas/Href"
+          $ref: "#/components/schemas/FirstHref"
         prev:
-          $ref: "#/components/schemas/Href"
+          $ref: "#/components/schemas/PrevHref"
         self:
-          $ref: "#/components/schemas/Href"
+          $ref: "#/components/schemas/SelfHref"
         next:
-          $ref: "#/components/schemas/Href"
+          $ref: "#/components/schemas/NextHref"
       type: object
 
     BasicUser:
       properties:
         email:
           type: string
+          description: Email address of the user
+          example: "john.smith@example.com"
         login_name:
           type: string
+          description: Login name of the user
+          example: "jsmith"
         first_name:
           type: string
+          description: First name of the user
+          example: "John"
         last_name:
           type: string
+          description: Last name of the user
+          example: "Smith"
       type: object
 
     DID:
       properties:
         phone_number:
           type: string
+          description: Phone number
+          example: "14155550100"
         custom_tag:
           type: string
+          description: Custom tag associated with the phone number
+          example: "My Tag"
       type: object
 
     Line:
       properties:
         handset_name:
           type: string
+          description: Name of the handset
+          example: "line1-VH1234567"
         sip_id:
           type: string
+          description: SIP identifier of the handset
+          example: "VH1234567"
       type: object
 
     EndUserRoute:
       properties:
         extension_number:
           type: string
+          description: Extension number
+          example: "789"
         user:
           $ref: "#/components/schemas/BasicUser"
         location_id:
           type: number
+          description: Unique identifier of the assigned location
+          example: 123456
         vtt_enabled:
           type: boolean
+          description: Voicemail transcription status of the location
+          example: true
         dnd_enabled:
           type: boolean
+          description: Do Not Disturb status of the extension
+          example: false
         caller_id:
           type: string
+          description: Caller ID of the extension
+          example: "John Smith"
         block_caller_id:
           type: boolean
+          description: Block Caller ID status of the extension
+          example: false
         dids:
           items:
             $ref: "#/components/schemas/DID"
           type: array
+          description: Collection of phone numbers assigned to the extension
         extension_handsets:
           items:
             $ref: "#/components/schemas/Line"
           type: array
+          description: Collection of handsets assigned to the extension
       type: object
 
     EndUserRouteEmbeddedObject:
@@ -206,10 +255,22 @@ components:
 
     EndUserRouteHalResponse:
       properties:
-        page_size:
+        page_size:         
           type: number
-        cursor:
+          example: 10
+          description: Number of records per page
+        page:                  
           type: number
+          example: 1
+          description: Current page number
+        total_pages:
+          type: number
+          example: 10
+          description: Total number of pages
+        total_items:
+          type: number
+          example: 100        
+          description: Total number of records
         _links:
           $ref: "#/components/schemas/Links"
         _embedded:
@@ -225,3 +286,32 @@ components:
           description: Http Response Code
           type: number
       type: object
+
+    ValidationErrorsResponse:
+      properties:
+        status:
+          description: Error status code
+          type: number
+        title:
+          description: Error title
+          type: string
+        instance:
+          description: Error Track ID
+          type: string
+        invalid_parameters:
+          items:
+            $ref: "#/components/schemas/DetailedInvalidParam"
+          description: Invalid parameters and their reason for failing
+          type: array
+      type: object
+
+    DetailedInvalidParam:
+      properties:
+        name:
+          type: string
+          description: Invalid property name
+        reason:
+          type: string
+          description: Invalid property reason
+      type: object
+
