--- a/definitions/vonage-business-cloud/user.yml
+++ b/definitions/vonage-business-cloud/user.yml
@@ -1,7 +1,7 @@
 ---
 openapi: 3.0.0
 info:
-  version: 1.10.1
+  version: 1.11.7
   title: User API
   description: Retrieve information about users.
   contact:
@@ -12,7 +12,7 @@ info:
     url: "https://www.vonage.com/business/legal-policy-center/business-cloud/tos"
 
 servers:
-- url: "https://api.vonage.com"
+- url: "https://api.vonage.com/t/vbc.prod/provisioning"
 paths:
 
   "/api/accounts/{account_id}/users":
@@ -25,43 +25,43 @@ paths:
           required: false
           schema:
             type: number
-          description: Page size for pagination
+          description: Number of records per page
+          example: 10
         - in: query
-          name: cursor
+          name: page
           required: false
           schema:
             type: number
-          description: Cursor for pagination
-        - in: query
-          name: order
-          required: false
-          schema:
-            type: string
-          description: ASC or DESC
+          description: Current page number
+          example: 10
         - in: query
           name: first_name
           required: false
           schema:
             type: string
-          description: filter by first name
+          description: Filter by first name
+          example: "John"
         - in: query
           name: last_name
           required: false
           schema:
             type: string
-          description: filter by last name
+          description: Filter by last name
+          example: "Smith"
         - in: query
           name: login_name
           required: false
           schema:
             type: string
-          description: filter by login name
+          description: Filter by login name
+          example: "jsmith"          
         - in: query
           name: email
           required: false
           schema:
             type: string
-          description: filter by email address
+          description: Filter by email address
+          example: "john.smith@example.com"
       responses:
         "200":
           description: Success
@@ -69,6 +69,12 @@ paths:
             "application/json":
               schema:
                 $ref: "#/components/schemas/UsersHalResponse"
+        "400":
+          description: Invalid parameters given
+          content:
+            "application/json":
+              schema:
+                $ref: "#/components/schemas/ValidationErrorsResponse"                
       security:
         - bearerAuth: []
       summary: Get account users data by account ID
@@ -93,6 +99,10 @@ paths:
                 $ref: "#/components/schemas/UserHalResponse"
         "404":
           description: User not found
+          content:
+            "application/json":
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
       security:
         - bearerAuth: []
       summary: Get user data by account ID and user ID
@@ -111,64 +121,104 @@ components:
       schema:
         type: string
       description: The account ID
+      example: 123456
 
   schemas:
-    Href:
+    FirstHref:
       properties:
         href:
           type: string
-      type: object
+      description: URL to the first page of records
+    PrevHref:
+      properties:
+        href:
+          type: string
+      description: URL to the previous page of records
+    SelfHref:
+      properties:
+        href:
+          type: string
+      description: URL to the current page of records
+    NextHref:
+      properties:
+        href:
+          type: string
+      description: URL to the next page of records
+    LastHref:
+      properties:
+        href:
+          type: string
+      description: URL to the last page of records
 
     Links:
       properties:
         first:
-          $ref: "#/components/schemas/Href"
+          $ref: "#/components/schemas/FirstHref"
         prev:
-          $ref: "#/components/schemas/Href"
+          $ref: "#/components/schemas/PrevHref"
         self:
-          $ref: "#/components/schemas/Href"
+          $ref: "#/components/schemas/SelfHref"
         next:
-          $ref: "#/components/schemas/Href"
+          $ref: "#/components/schemas/NextHref"
       type: object
 
     Contact:
       properties:
         type:
           type: string
+          description: Contact type
+          example: "Home"
         value:
           type: string
+          description: Contact value
+          example: "14155550100"
       type: object
 
     UserExtension:
       properties:
         dids:
           items:
-            type: string
+            $ref: "#/components/schemas/DID"
           type: array
+          description: Collection of phone numbers assigned to the extension
         extension_number:
           type: string
+          description: Extension number
+          example: "789"
       type: object
 
     User:
       properties:
         email:
           type: string
+          description: Email address of the user
+          example: "john.smith@example.com"
         login_name:
           type: string
+          description: Login name of the user
+          example: "jsmith"
         first_name:
           type: string
+          description: First name of the user
+          example: "John"
         last_name:
           type: string
+          description: Last name of the user
+          example: "Smith"
         id:
           type: number
+          description: Unique identifier of the user
+          example: 1234567
         contact_numbers:
           items:
             $ref: "#/components/schemas/Contact"
           type: array
+          description: Collection of contact objects
         extensions:
           items:
             $ref: "#/components/schemas/UserExtension"
           type: array
+          description: Collection of extension objects
       type: object
 
     UsersEmbeddedObject:
@@ -187,10 +237,22 @@ components:
 
     UserHalResponse:
       properties:
-        page_size:
+        page_size:         
           type: number
-        cursor:
+          example: 10
+          description: Number of records per page
+        page:                  
           type: number
+          example: 1
+          description: Current page number
+        total_pages:
+          type: number
+          example: 10
+          description: Total number of pages
+        total_items:
+          type: number
+          example: 100        
+          description: Total number of records
         _links:
           $ref: "#/components/schemas/Links"
         _embedded:
@@ -199,12 +261,74 @@ components:
 
     UsersHalResponse:
       properties:
-        page_size:
+        page_size:         
           type: number
-        cursor:
+          example: 10
+          description: Number of records per page
+        page:                  
           type: number
+          example: 1
+          description: Current page number
+        total_pages:
+          type: number
+          example: 10
+          description: Total number of pages
+        total_items:
+          type: number
+          example: 100        
+          description: Total number of records
         _links:
           $ref: "#/components/schemas/Links"
         _embedded:
           $ref: "#/components/schemas/UsersEmbeddedObject"
       type: object
+
+    DID:
+      properties:
+        phone_number:
+          type: string
+          description: Phone number
+          example: "14155550100"
+        custom_tag:
+          type: string
+          description: Custom tag associated with the phone number
+          example: My Tag
+      type: object
+
+    ErrorResponse:
+      properties:
+        msg:
+          description: Error message
+          type: string
+        status:
+          description: Http Response Code
+          type: number
+      type: object
+
+    ValidationErrorsResponse:
+      properties:
+        status:
+          description: Error status code
+          type: number
+        title:
+          description: Error title
+          type: string
+        instance:
+          description: Error Track ID
+          type: string
+        invalid_parameters:
+          items:
+            $ref: "#/components/schemas/DetailedInvalidParam"
+          description: Invalid parameters and their reason for failing
+          type: array
+      type: object
+
+    DetailedInvalidParam:
+      properties:
+        name:
+          type: string
+          description: Invalid property name
+        reason:
+          type: string
+          description: Invalid property reason
+      type: object      
