--- a/definitions/vonage-business-cloud/user.yml
+++ b/definitions/vonage-business-cloud/user.yml
@@ -63,16 +63,16 @@ paths:
           description: Filter by email address
           example: "john.smith@example.com"
       responses:
-        "200":
+        '200':
           description: Success
           content:
-            "application/json":
+            application/json:
               schema:
                 $ref: "#/components/schemas/UsersHalResponse"
-        "400":
+        '400':
           description: Invalid parameters given
           content:
-            "application/json":
+            application/json:
               schema:
                 $ref: "#/components/schemas/ValidationErrorsResponse"                
       security:
@@ -91,16 +91,16 @@ paths:
             type: number
           description: The ID of the user
       responses:
-        "200":
+        '200':
           description: Success
           content:
-            "application/json":
+            application/json:
               schema:
                 $ref: "#/components/schemas/UserHalResponse"
-        "404":
+        '404':
           description: User not found
           content:
-            "application/json":
+            application/json:
               schema:
                 $ref: "#/components/schemas/ErrorResponse"
       security:
